--- a/inftr.tex
+++ b/inftr.tex
@@ -3,8 +3,8 @@
 \usepackage{graphicx}
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
-\usepackage[round]{natbib}	% omit round for square brackets
-\bibliographystyle{plainnat}
+\usepackage[numbers]{natbib}
+\bibliographystyle{plain}
 
 \begin{document}
 \maintitle{Module}
